add views and controllers to dashboard

--- a/app/views/dashboard/home/index.html.erb
+++ b/app/views/dashboard/home/index.html.erb
@@ -1,2 +1,5 @@
-hello world
+<h3>Hello <%= @user.email %></h3>
 
+<%= link_to "your posts", dashboard_posts_path  %> <br>
+<%= link_to "your received requests", dashboard_received_requests_path %> <br>
+<%= link_to "your sent requests", dashboard_sent_requests_path %>
