--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,3 +3,5 @@
 <p><%= @post.author_id %><p> <!-- this is to test author_id, should not be displayed to users though -->
   <p><%= link_to 'Back to overview', posts_path %></p>
 
+
+<p><%= link_to "Write a request to this Post", new_post_request_path(@post) %></p>
