--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,5 +1,7 @@
 <div class="wrapper">
+<h1>New request</h1>
   <%= form_for [@post, @request] do |f| %>
     <%= f.text_area :message ,:class => 'message' %>
     <%= f.submit :class => 'btn btn-success' %>
+    <% end %>
 </div>
