--- a/app/views/dashboard/home/index.html.erb
+++ b/app/views/dashboard/home/index.html.erb
@@ -5,6 +5,12 @@
   <% @posts.each do |post| %>
    <b> <%= post.subject %> </b> <br>
     <%= post.content %> <hr>
+    <div class="post-requests">
+    <% requests = @received_requests.where(post: post) %>
+      <% requests.each do |request| %>
+      <%= request.message %>
+      <% end %>
+    </div>
   <% end %> <br>
   <%= link_to "See all your posts", dashboard_posts_path  %> <br>
 </div>
