--- a/app/views/dashboard/received_requests/index.html.erb
+++ b/app/views/dashboard/received_requests/index.html.erb
@@ -1,1 +1,22 @@
 JE RECEIVED REQUESTS
+
+
+<div class="received_requests">
+  <h2>DIT ZIJN JE RECEIVED REQUESTS</h2>
+  <% @received_requests.each do |request| %>
+   <b> <%= request.post.subject %> </b> <br>
+    <%= request.message %> <br>
+ <!-- Add accept or decline button -->
+      <% if request.status == "pending" %>
+          <div class="btn btn-success">accept</div>
+        <div class="btn btn-danger">decline</div>
+      <% elsif request.status == "accepted" %>
+          <div class="btn btn-success">You are now a match with request.messenger.email!</div>
+      <% elsif request.status == "declined" %>
+          <div class="btn btn-decline">You declined this request</div>
+      <% else %>
+          <div class="wrong">Something went wrong</div>
+      <% end %>
+  <% end %> <br>
+ <%= link_to "Back to dashboard", dashboard_root_path %> <br>
+</div>
