Add style to dashboard

--- a/app/views/dashboard/home/index.html.erb
+++ b/app/views/dashboard/home/index.html.erb
@@ -1,63 +1,104 @@
-<!-- WELCOME USER -->
-<h3>Hello <%= @user.email %></h3>
-<hr>
-
-<!-- SHOW ALL YOUR POSTS AND THE REQUESTS MADE ON IT -->
-<div class="your_posts">
-  <h2>DIT ZIJN JE POSTS</h2>
-  <% @posts.each do |post| %>
-  <b> <%= post.subject %> </b> <br>
-  <%= post.content %> <hr>
-  <div class="post-requests">
-    <% requests = @received_requests.where(post: post) %>
-    <% requests.each do |request| %>
-    <%= request.message %>
-    <% end %>
+<div class="dashboard-wrapper">
+  <div class="dashboard-banner">
+    <!-- WELCOME USER -->
+    <h3 class="text-center">Hello <%= @user.email %></h3>
   </div>
-  <% end %> <br>
-  <%= link_to "See all your posts", dashboard_posts_path  %> <br>
-</div>
-<hr>
+  <div class="dashboard-container">
+    <div class="dashboard-left">
+      <!-- SHOW ALL RECEIVED REQUESTS -->
+      <div class="received_requests">
+        <h2>Your received requests</h2>
+        <% @received_requests.each do |request| %>
+        <div class="dashboard-card left-card">
+          <div class="subject"> reaction to: <%= link_to request.post.subject, post_path(request.post)  %> </div>
+          <%= request.message %> <br>
+          <div class="sender-request">- <%= request.messenger.email %></div> <br>
 
-<!-- SHOW ALL RECEIVED REQUESTS -->
-<div class="received_requests">
-  <h2>DIT ZIJN JE RECEIVED REQUESTS</h2>
-  <% @received_requests.each do |request| %>
-  <b> <%= request.post.subject %> </b> <br>
-  <%= request.message %> <br>
+            <!-- Add accept or decline button -->
+            <% if request.status == "pending" %>
+              <%= link_to "accept", accept_dashboard_received_request_path(request), method: :patch , class: "btn btn-success" %>
+              <%= link_to "decline", refuse_dashboard_received_request_path(request), method: :patch, class: "btn btn-danger" %>
+            <% elsif request.status == "accepted" %>
+              <div class="label label-success">You are now a match with <%= request.messenger.email %></div>
+            <% elsif request.status == "declined" %>
+              <div class="label label-danger">You declined this request</div>
+            <% else %>
+              <div class="wrong">Something went wrong</div>
+            <% end %>
+            </div>
+        <% end %> <br>
+      <%= link_to "See more received requests", dashboard_received_requests_path %>
+      <br>
+    </div>
 
-  <!-- Add accept or decline button -->
-  <% if request.status == "pending" %>
-  <%= link_to "accept", accept_dashboard_received_request_path(request), method: :patch , class: "btn btn-success" %>
-  <%= link_to "decline", refuse_dashboard_received_request_path(request), method: :patch, class: "btn btn-danger" %></div>
-  <% elsif request.status == "accepted" %>
-  <div class="label label-success">You are now a match with request.messenger.email!</div>
-  <% elsif request.status == "declined" %>
-  <div class="label label-danger">You declined this request</div>
-  <% else %>
-  <div class="wrong">Something went wrong</div>
-  <% end %>
-  <% end %> <br>
-  <%= link_to "See more received requests", dashboard_received_requests_path %> <br>
+      <!-- SHOW ALL SENT REQUESTS -->
+    <div class="sent_requests">
+      <h2>Your sent requests</h2>
+        <% @sent_requests.each do |request| %>
+        <div class="dashboard-card left-card">
+          <div class="subject">reaction to: <%=link_to request.post.subject, post_path(request.post) %></div>
+          <%= request.message %> <br> <br>
+
+            <!-- Show status of request -->
+            <% if request.status == "pending" %>
+             <div class="label label-warning"><%= request.post.author.email %> didn't respond yet!</div>
+            <% elsif request.status == "accepted" %>
+              <div class="label label-success">You are a match with <%= request.post.author.email %> </div>
+            <% elsif request.status == "declined" %>
+              <div class="label label-danger"><%= request.post.author.email %> declined your request</div>
+            <% else %>
+              <div class="wrong">Something went wrong</div>
+            <% end %> <br>
+            </div>
+        <% end %> <br>
+      <%= link_to "See more sent requests", dashboard_sent_requests_path %> <br>
+    </div>
+
+
+
+    </div>
+    <div class="dashboard-right">
+      <!-- SHOW ALL YOUR POSTS AND THE REQUESTS MADE ON IT -->
+      <div class="your_posts">
+        <h2 class="text-center">Your posts</h2>
+        <% @posts.each do |post| %>
+        <div class="dashboard-card right-card">
+          <div class="subject"> <%= post.subject %></div>
+          <%= post.content %> <br>
+            <% requests = @received_requests.where(post: post) %>
+            <br>
+            <div class="subject"> reactions to: <%= post.subject %> </div>
+            <% requests.each do |request| %>
+            <div class="request-card">
+            <%= request.message %>
+             <div class="sender-request">- <%= request.messenger.email %></div> <br>
+
+            <!-- Add accept or decline button -->
+            <% if request.status == "pending" %>
+              <%= link_to "accept", accept_dashboard_received_request_path(request), method: :patch , class: "btn btn-success" %>
+              <%= link_to "decline", refuse_dashboard_received_request_path(request), method: :patch, class: "btn btn-danger" %>
+            <% elsif request.status == "accepted" %>
+              <div class="label label-success">You are now a match with <%= request.messenger.email %></div>
+            <% elsif request.status == "declined" %>
+              <div class="label label-danger">You declined this request</div>
+            <% else %>
+              <div class="wrong">Something went wrong</div>
+            <% end %>
+            </div>
+            <% end %>
+          </div>
+        <% end %> <br>
+        <%= link_to "See all your posts", dashboard_posts_path  %> <br>
+      </div>
+    </div>
+  </div>
 </div>
 
-<!-- SHOW ALL SENT REQUESTS -->
-<div class="sent_requests">
-  <h2>DIT ZIJN JE SENT REQUESTS</h2>
-  <% @sent_requests.each do |request| %>
-  <b> <%= request.post.subject %> </b> <br>
-  <%= request.message %> <br>
-  <!-- Show status of request -->
-  <% if request.status == "pending" %>
-  <div class="label label-warning"><%= request.post.author.email %> didn't respond yet!</div>
-  <% elsif request.status == "accepted" %>
-  <div class="label label-success">You are a match with <%= request.post.author.email %> </div>
-  <% elsif request.status == "declined" %>
-  <div class="label label-danger"><%= request.post.author.email %> declined your request</div>
-  <% else %>
-  <div class="wrong">Something went wrong</div>
-  <% end %> <br>
-  <% end %> <hr>
-  <%= link_to "See more sent requests", dashboard_sent_requests_path %> <br>
-</div>
+
+
+
+
+
+
+
 
