show and sort on date

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -49,6 +49,11 @@ text-align: center;
   }
 }
 
+.created-at {
+    // margin-left: 60px;
+    font-size: 10px;
+  }
+
   .left-card {
     background-color: rgba(206, 206, 206, 0.5);
   }
