add profile page

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,9 @@
   <%= f.input :username, autofocus: true  %>
   <%= f.input :postal_code, autofocus: true  %>
   <p>I am a:
-    <%= f.select :kind, options_for_select(["refugee", "dutchie"]) %>
+  <div class="radio-buttons">
+      <%= f.collection_radio_buttons :kind, [['dutchie', 'dutchie'] ,['refugee', 'refugee']],:first, :last %>
+    </div>
   </p>
   <%= f.input :email, autofocus: true %>
   <%= f.input :password, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
