--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,9 +5,11 @@
 
 <div class="form-inputs">
   <%= f.input :username, autofocus: true  %>
+  <%= f.input :first_name, autofocus: true  %>
+  <%= f.input :last_name, autofocus: true %>
   <%= f.input :postal_code, autofocus: true  %>
   <p>I am a:
-  <div class="radio-buttons">
+    <div class="radio-buttons">
       <%= f.collection_radio_buttons :kind, [['dutchie', 'dutchie'] ,['refugee', 'refugee']],:first, :last %>
     </div>
   </p>
