--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,7 +1,8 @@
 <div class="wrapper">
   <div class="text-center">
-    <h1><%= @user.username %></h1>
-    <h2><%= @user.email  %></h2>
-    <h2><%= @user.postal_code  %></h2>
+    <h1>name: <%= @user.first_name%> <%=@user.last_name %></h1>
+    <h2>username: <%= @user.username  %></h2>
+    <h2>email: <%= @user.email  %></h2>
+    <h2>postal_code<%= @user.postal_code  %></h2>
   </div>
 </div>
