add basics homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,21 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner homie" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), ;">
+  <div class="banner-content">
+    <h1>RefuGapp</h1>
+    <p>Fill the gap between Locals and refugees by sharing skills.</p>
+
+    <%= link_to "CONNECT", new_user_session_path, class:"btn btn-warning btn-lg"%>
+  </div>
+</div>
+
+<div class="banner about">
+  <div class="banner-content">
+    <h1>ABOUT</h1>
+
+    <p>Are you a Local? Get to now the new comers in your city by exchanging skills! Discover how refugees can help you,m sen da request and.. connect!
+    Or: a skill you want to share? Make a post and someone will find you!</p>
+    <p>Are you a newcomer? Get to know the locals by offering your skills! Make a post and help a local with the things you are good at.
+    Or: in need of some help? Look what the locals are offering and send a request!</p>
+
+  </div>
+</div>
+
