--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,7 +14,7 @@
     <%= link_to dashboard_root_path() , class: "navbar-wagon-item navbar-wagon-link" do%>
     <div class="badge-container">
       <i class="fa fa-comment"></i>
-      <div class="badge badge-blue">10</div>
+      <div class="badge badge-blue"></div>
 
     </div>
     <% end  %>
