--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,3 +2,37 @@
  * CSS code specific to home page
  * (margin/padding adjustments)
  * ------------------------------------- */
+
+.banner {
+  color: white;
+  text-align: center;
+  height: 100vh;
+  /* if you have a 70px navbar => height: calc(100vh - 70px); */
+  background-size: cover !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+/*   background-image: url('https://images.unsplash.com/photo-1465711403138-162e171bb7e4?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=7b50b5b89ba56fd4db79d9377c7dda38')
+ */}
+
+.homie {
+   background-image: url('https://images.unsplash.com/photo-1465711403138-162e171bb7e4?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=7b50b5b89ba56fd4db79d9377c7dda38')
+
+}
+
+.about{
+  background-color: #0E303A;
+  padding: 100px;
+}
+
+.banner h1 {
+  font-size: 50px;
+  font-weight: bold;
+  text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+}
+.banner p {
+  font-size: 20px;
+  font-weight: lighter;
+  color: rgba(255, 255, 255, 0.7);
+  margin-bottom: 20px;
+}
