--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -11,7 +11,7 @@ text-align: center;
 }
 
 .dashboard-banner {
-  padding: 80px;
+  padding: 120px;
   height: 200px;
   background-color: black;
   color: rgba(250, 250, 0, 0.8);
@@ -59,4 +59,12 @@ text-align: center;
   }
   .right-card {
     background-color: white;
+  }
+
+  .post-card {
+    background-color: rgba(250, 250, 0, 0.8);
+  }
+
+  .post-request-card {
+    background-color: rgba(206, 206, 206, 1);
   }
