wip map not yet working though...

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,3 +7,19 @@
   <%end%>
 </p>
 <p><%= link_to 'Make a post!', new_post_path %></p>
+
+
+<div id="map" style="width: 100%; height: 600px;"></div>
+
+<% content_for(:after_js) do %>
+  <%= javascript_tag do %>
+    $(document).on('ready', function() {
+      handler = Gmaps.build('Google');
+      handler.buildMap({ internal: { id: 'map' } }, function(){
+        markers = handler.addMarkers(<%= raw @markers.to_json %>);
+        handler.bounds.extendWith(markers);
+        handler.fitMapToBounds();
+      });
+    })
+  <% end %>
+<% end %>
