fix the application layout

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,6 +4,7 @@
 
 <%= f.input :subject %>
 <%= f.input :content %>
+<%= f.input :city, input_html: {value: current_user.city || ""} %>
 <%= f.input :postal_code%>
 
 
