--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,15 +5,15 @@
 
 <div class="form-inputs">
   <%= f.input :username, autofocus: true  %>
-  <%= f.input :first_name, autofocus: true  %>
-  <%= f.input :last_name, autofocus: true %>
-  <%= f.input :postal_code, autofocus: true  %>
+  <%= f.input :first_name  %>
+  <%= f.input :last_name %>
+  <%= f.input :city %>
   <p>I am a:
     <div class="radio-buttons">
       <%= f.collection_radio_buttons :kind, [['dutchie', 'dutchie'] ,['refugee', 'refugee']],:first, :last %>
     </div>
   </p>
-  <%= f.input :email, autofocus: true %>
+  <%= f.input :email %>
   <%= f.input :password, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
   <%= f.input :password_confirmation %>
 </div>
