--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 <body>
  <%= render 'shared/navbar' %>
  <%= render 'shared/flashes' %>
+ <%= yield %>
 
  <%= javascript_include_tag "https://maps.google.com/maps/api/js?libraries=places&sensor=false" %>
  <%= javascript_include_tag "https://cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js" %>
