--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -5,4 +5,5 @@
     <h2>email: <%= @user.email  %></h2>
     <h2>postal_code<%= @user.postal_code  %></h2>
   </div>
+  <%= link_to "EDIT", edit_profile_path  %>
 </div>
