--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,32 @@
-<h1>Posts</h1>
-<p>
-  <% @posts.each do |post| %>
-  <p><%= link_to post.subject, post_path(post) %> </p>
-  <p><%= post.content %></p>
-  <hr>
-  <%end%>
-</p>
-<p><%= link_to 'Make a post!', new_post_path %></p>
+<div class="banner posts" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), ;">
+  <div class="wrapper">
+    <div class="banner-content">
+      <br>
+      <br>
+      <h1>POSTS</h1>
+      <p><%= link_to 'Make a post!', new_post_path, class:"btn btn-danger btn-lg" %></p>
+      <div class="card-wrapper">
+        <div class="container">
+          <div class="row">
+            <% @posts.each do |post| %>
+            <div class="col-xs-12 col-sm-6">
+              <div class= "card">
+                <div class="card-title"><h2><%= post.subject %></h2> </div>
+                <div class="card-description">
+                  <%= link_to "", post_path(post), class: 'card-link'  %>
+                  <p><%= post.content %></p> </div>
+                </div>
+              </div>
+
+              <% end %>
+            </div>
+          </div>
+        </div>
+        <p><%= link_to 'Make a post!', new_post_path, class:"btn btn-danger btn-lg" %></p>
+      </div>
+    </div>
+  </div>
+
+
+
+
