--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,14 +11,20 @@
     <% if user_signed_in? %>
 
     <!-- Notification -->
-    <%= link_to dashboard_root_path() , class: "navbar-wagon-item navbar-wagon-link" do%>
-    <div class="badge-container">
-      <i class="fa fa-comment"></i>
-      <div class="badge badge-blue"></div>
-
+    <div class="navbar-wagon-item navbar-wagon-link">
+      <%= link_to dashboard_root_path() do%>
+      <div class="badge-container">
+        <i class="fa fa-comment"></i>
+        <div class="badge badge-blue"></div>
+        <% end  %>
+      </div>
     </div>
-    <% end  %>
 
+    <div class="navbar-wagon-item navbar-wagon-link">
+      <%= link_to posts_path() do%>
+      <i class="fa fa-list"></i>
+      <% end  %>
+    </div>
 
 
     <!-- Profile picture and dropdown -->
@@ -54,4 +60,5 @@
     <% end %>
   </div>
 </div>
+
 
