--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -15,8 +15,10 @@
           </div>
         </p>
         <% end  %>
+        <%= f.input :description  %>
         <%= f.input :email  %>
-        <%= f.input :postal_code  %>
+        <%= f.input :photo  %>
+        <%= f.input :photo_cache, as: :hidden  %>
         <%= f.submit %>
         <% end %>
 
