Add new postbutton to navbar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -26,6 +26,12 @@
       <% end  %>
     </div>
 
+    <div class="navbar-wagon-item navbar-wagon-link">
+      <%= link_to new_post_path() do  %>
+        <i class="fa fa-envelope"></i>
+      <% end %>
+    </div>
+
 
     <!-- Profile picture and dropdown -->
     <div class="navbar-wagon-item">
