--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,10 +9,11 @@
       <div class="card-wrapper">
         <div class="container">
           <div class="row">
-            <% @posts.each do |post| %>
+            <% @posties.each do |post| %>
             <div class="col-xs-12 col-sm-6">
               <div class= "card">
                 <div class="card-title"><h2><%= post.subject %></h2> </div>
+                <p><%= post.updated_at.strftime("%d-%m-%Y %H:%M:%S") %></p>
                 <p><%= User.find(post.author_id).username %></p>
                 <div class="card-description">
                   <%= link_to "", post_path(post), class: 'card-link'  %>
