--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -9,8 +9,8 @@
   background: rgba(195, 195, 195, 0.3 );
   color: $green;
   position: relative;
-  height: 150px;
-  width: 500px;
+  height: 330px;
+  width: 530px;
   margin: 10px;
   padding: 15px;
 }
@@ -22,7 +22,7 @@
 .card-link {
   position: absolute;
   top: 0;
-  bottom: 0;
+  bottom: 30%;
   left: 0;
   width: 100%;
   z-index:2;
@@ -33,3 +33,4 @@
 .card-link:hover{
   opacity: 0.1;
 }
+
