--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -17,33 +17,36 @@
                 <p><%= User.find(post.author_id).username %></p>
                 <div class="card-description">
                   <%= link_to "", post_path(post), class: 'card-link'  %>
-                  <p><%= post.content %></p> </div>
+                  <p><%= post.content %></p>
+                  <p><%= link_to "Write a request to this Post", new_post_request_path(post), class: "btn btn-success" %></p>
+
                 </div>
               </div>
-
-              <% end %>
             </div>
+
+            <% end %>
           </div>
         </div>
-        <p><%= link_to 'Make a post!', new_post_path, class:"btn btn-danger btn-lg" %></p>
       </div>
+      <p><%= link_to 'Make a post!', new_post_path, class:"make btn btn-danger btn-lg" %></p>
     </div>
   </div>
+</div>
 
 
 <div id="map" style="width: 100%; height: 600px;"></div>
 
 <% content_for(:after_js) do %>
-  <%= javascript_tag do %>
-    $(document).on('ready', function() {
-      handler = Gmaps.build('Google');
-      handler.buildMap({ internal: { id: 'map' } }, function(){
-        markers = handler.addMarkers(<%= raw @markers.to_json %>);
-        handler.bounds.extendWith(markers);
-        handler.fitMapToBounds();
-      });
-    })
-  <% end %>
+<%= javascript_tag do %>
+$(document).on('ready', function() {
+handler = Gmaps.build('Google');
+handler.buildMap({ internal: { id: 'map' } }, function(){
+markers = handler.addMarkers(<%= raw @markers.to_json %>);
+handler.bounds.extendWith(markers);
+handler.fitMapToBounds();
+});
+})
+<% end %>
 <% end %>
 
 
