--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,6 +1,11 @@
 <div class="wrapper">
   <div class="text-center">
-  <%= cl_image_tag @user.photo_url, height: 300, width: 400, crop: :fill  %>
+    <% if @user.photo.file != nil  %>
+    <%= cl_image_tag @user.photo_url, height: 300, width: 400, crop: :fill  %>
+    <% elsif @user.picture  %>
+    <%= cl_image_tag @user.picture %>
+    <% else  %>    
+    <% end  %>
     <h1>name: <%= @user.first_name%> <%=@user.last_name %></h1>
     <h2>username: <%= @user.username  %></h2>
     <h2>email: <%= @user.email  %></h2>
