--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,13 +12,12 @@
             <% @posties.each do |post| %>
             <div class="col-xs-12 col-sm-6">
               <div class= "card">
-                <div class="card-title"><h2><%= post.subject %></h2> </div>
+                <div class="card-title"><h2><%= link_to post.subject, post_path(post) %></h2> </div>
                 <p><%= post.updated_at.strftime("%d-%m-%Y %H:%M:%S") %></p>
                 <p><%= User.find(post.author_id).username %></p>
                 <div class="card-description">
-                  <%= link_to "", post_path(post), class: 'card-link'  %>
                   <p><%= post.content %></p>
-                  <p><%= link_to "Write a request to this Post", new_post_request_path(post), class: "btn btn-success" %></p>
+                  <p><%= link_to "Write a request to this Post", new_post_request_path(post), class: "make btn btn-success" %></p>
 
                 </div>
               </div>
@@ -28,7 +27,7 @@
           </div>
         </div>
       </div>
-      <p><%= link_to 'Make a post!', new_post_path, class:"make btn btn-danger btn-lg" %></p>
+      <p><%= link_to 'Make a post!', new_post_path, class:"btn btn-danger btn-lg" %></p>
     </div>
   </div>
 </div>
