--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,7 +1,21 @@
 <div class="wrapper">
-<h1>New request</h1>
-  <%= form_for [@post, @request] do |f| %>
+  <h2>Request to:</h2>
+  <div class= "card">
+    <div class="card-title">
+      <h1><%= link_to @post.subject, post_path(@post) %></h1>
+    <p><%= @post.updated_at.strftime("%d-%m-%Y %H:%M:%S") %></p>
+    </div>
+
+    <div class="card-description">
+    <h3><%= @author.username %></h3>
+      <p><%= @post.content %></p>
+    </div>
+  </div>
+  <div class="text-center">
+  <h1 class="text-center">New request:</h1>
+    <%= form_for [@post, @request] do |f| %>
     <p><%= f.text_area :message ,:class => 'message' %></p>
     <p><%= f.submit :class => 'btn btn-success' %></p>
     <% end %>
+  </div>
 </div>
