--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -28,9 +28,10 @@
     </div>
   </div>
 
-
 <div id="map" style="width: 100%; height: 600px;"></div>
 
+
+<!-- This is the code for the map -->
 <% content_for(:after_js) do %>
   <%= javascript_tag do %>
     $(document).on('ready', function() {
@@ -43,5 +44,6 @@
     })
   <% end %>
 <% end %>
+
 
 
