--- a/app/views/dashboard/home/index.html.erb
+++ b/app/views/dashboard/home/index.html.erb
@@ -1,7 +1,7 @@
 <div class="dashboard-wrapper">
   <div class="dashboard-banner">
     <!-- WELCOME USER -->
-    <h3 class="text-center">Hello <%= username(@user) -%></h3>
+    <h3 class="text-center">Hello <%= @user.title %></h3>
   </div>
   <div class="dashboard-container">
     <div class="dashboard-left">
@@ -12,14 +12,14 @@
         <div class="dashboard-card left-card">
           <div class="subject"> reaction to: <%= link_to request.post.subject, post_path(request.post)  %> </div>
           <%= request.message %> <br>
-          <div class="sender-request">- <%= link_to username(request.messenger), user_path(request.messenger) %></div>
+          <div class="sender-request">- <%= link_to request.messenger.title, user_path(request.messenger) %></div>
 
             <!-- Add accept or decline button -->
           <% if request.status == "pending" %>
               <%= link_to "accept", accept_dashboard_received_request_path(request), method: :patch , class: "btn btn-success" %>
               <%= link_to "decline", refuse_dashboard_received_request_path(request), method: :patch, class: "btn btn-danger" %>
             <% elsif request.status == "accepted" %>
-              <div class="label label-success">You are now a match with <%= username(request.messenger) %></div>
+              <div class="label label-success">You are now a match with <%= request.messenger.title %></div>
             <% elsif request.status == "declined" %>
               <div class="label label-danger">You declined this request</div>
             <% else %>
@@ -46,11 +46,11 @@
 
             <!-- Show status of request -->
             <% if request.status == "pending" %>
-             <div class="label label-warning"><%= username(request.post.author) %> didn't respond yet!</div>
+             <div class="label label-warning"><%= request.post.author.title %> didn't respond yet!</div>
             <% elsif request.status == "accepted" %>
-              <div class="label label-success">You are a match with <%= username(request.post.author) %> </div>
+              <div class="label label-success">You are a match with <%= request.post.author.title %> </div>
             <% elsif request.status == "declined" %>
-              <div class="label label-danger"><%= request.post.author.email %> declined your request</div>
+              <div class="label label-danger"><%= request.post.author.title %> declined your request</div>
             <% else %>
               <div class="wrong">Something went wrong</div>
             <% end %> <br> <br>
@@ -80,14 +80,14 @@
             <% requests.reverse.take(3).each do |request| %>
             <div class="request-card">
             <%= request.message %>
-             <div class="sender-request">- <%= link_to username(request.messenger, user_path(request.messenger)) %></div> <br>
+             <div class="sender-request">- <%= link_to request.messenger.title, user_path(request.messenger) %></div> <br>
 
             <!-- Add accept or decline button -->
             <% if request.status == "pending" %>
               <%= link_to "accept", accept_dashboard_received_request_path(request), method: :patch , class: "btn btn-success" %>
               <%= link_to "decline", refuse_dashboard_received_request_path(request), method: :patch, class: "btn btn-danger" %>
             <% elsif request.status == "accepted" %>
-              <div class="label label-success">You are now a match with <%= username(request.messenger) %></div>
+              <div class="label label-success">You are now a match with <%= request.messenger.title %></div>
             <% elsif request.status == "declined" %>
               <div class="label label-danger">You declined this request</div>
             <% else %>
