--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,25 @@
 
 <div class="wrapper">
-<div class="text-center"></div>
-  HALLOOHALLOOHALLOO
-<%= username(@user) %>
+<div class="text-center">
+<h2>Het profiel van <%= @user.title %></h2>
+<%= cl_image_tag @user.full_picture  %> <br>
+<%= @user.description %> <br>
+<%= @user.kind %>
+</div>
+<br><br>
+<div class="posts">
+<br>
+  <p class="text-center">Posts of <%= @user.title %></p>
+  <% @user.posts.reverse.take(3).each do |post| %>
+<div class="dashboard-card right-card">
+          <div class="subject"> <%= link_to post.subject, post_path(post) %></div>
+          <%= post.content %> <br> <br>
+          <% if post.author.kind != current_user.kind %>
+          <%= link_to "send a request", new_post_request_path(post), class: "btn btn-warning" %>
 
-
-
+          <% end %>
+  </div> <br><br>
+  <% end %>
+</div>
 </div>
 
