--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,11 +19,11 @@
 
   <div class="banner posts" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), ;">
     <div class="banner-content">
-      <h1>POSTS</h1>
+        <h1>POSTS</h1>
       <div class="card-wrapper">
         <div class="container">
           <div class="row">
-            <% @posties.each do |post| %>
+            <% @posties.first(6).each do |post| %>
             <div class="col-xs-12 col-sm-6">
               <div class= "card">
                 <div class="card-title"><h2><%= link_to post.subject, post_path(post) %></h2> </div>
