--- a/app/views/dashboard/received_requests/index.html.erb
+++ b/app/views/dashboard/received_requests/index.html.erb
@@ -1,26 +1,10 @@
-<div class="dashboard-banner">
-    <!-- WELCOME USER -->
-    <h3 class="text-center">Hello <%= @user.email %></h3>
-    <p class="text-center">Here are your received requests</p>
-  </div>
+<%= render "dashboard/welcome", user: @user %>
 
 <div class="received_requests">
   <% @received_requests.each do |request| %>
-  <div class="dashboard-card left-card">
-   <b> <%= request.post.subject %> </b> <br>
-    <%= request.message %> <br> <br>
- <!-- Add accept or decline button -->
-      <% if request.status == "pending" %>
-          <div class="btn btn-success">accept</div>
-        <div class="btn btn-danger">decline</div>
-      <% elsif request.status == "accepted" %>
-          <div class="btn btn-success">You are now a match with request.messenger.email!</div>
-      <% elsif request.status == "declined" %>
-          <div class="btn btn-decline">You declined this request</div>
-      <% else %>
-          <div class="wrong">Something went wrong</div>
-      <% end %>
-      </div>
+  <!-- render to show a received request -->
+  <%= render "dashboard/received_request", request: request  %>
+
   <% end %> <br>
 
  <%= link_to "Back to dashboard", dashboard_root_path %> <br>
