--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -7,13 +7,16 @@
     </div>
 
     <div class="card-description">
-    <h3><%= @author.username %></h3>
+    <h3><%= @post.author.title %></h3>
       <p><%= @post.content %></p>
     </div>
   </div>
   <div class="text-center">
   <h1 class="text-center">New request:</h1>
     <%= form_for [@post, @request] do |f| %>
+      <% if @request.errors.any? %>
+        <div class="alert alert-warning alert-request"> <%= @request.errors.messages.first[1].join %> </div>
+      <% end %>
     <p><%= f.text_area :message ,:class => 'message' %></p>
     <p><%= f.submit :class => 'btn btn-success' %></p>
     <% end %>
