remove requestbutton when visitor

--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -7,7 +7,7 @@
     </div>
 
     <div class="card-description">
-    <h3><%= @author.username %></h3>
+    <h3><%= @post.author.title %></h3>
       <p><%= @post.content %></p>
     </div>
   </div>
