--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -6,6 +6,7 @@
 <%= f.input :content %>
 <%= f.input :city, input_html: {value: current_user.city || ""} %>
 <%= f.input :postal_code %>
+<%= f.input :category %>
 
 <%= f.submit %>
 
